# InstaStrategyAI

./: .replit  Pasted-QueryReturnedBadRequestException-400-Bad-Request-fail-status-message-feedback-required-when--1729456966222.txt  README.md  auth.py  chat_request.py  content_generator.py  data_visualizer.py  database.py  hiker_api.txt  instagram_analyzer.py  main.py  models.py  payments.py  pyproject.toml  run_migrations.sh  strategy_recommender.py
attached_assets/: Pasted--Jos-s-oot-kiinnostunut-parisuhteesi-hyvinvoinnista-ja-yhteytenne-vaalimisesta-niin-lataa-itselle-1738066141439.txt
migrations/: env.py
migrations/versions/: add_avg_engagement_metrics.py  add_post_texts_column.py
templates/: pricing.html
