[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "hikerapi>=1.5.1",
    "instaloader>=4.13.1",
    "nltk>=3.9.1",
    "numpy>=2.1.2",
    "oauthlib>=3.2.2",
    "openai>=1.52.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.39.0",
    "stripe>=11.3.0",
    "trafilatura>=1.12.2",
]
